// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Add /> handles conditional rendering correctly 1`] = `
<div>
  <Form
    onSubmit={[Function]}
  >
    <Input
      accept="image/gif, image/png, image/jpeg"
      name="image"
      onChange={[Function]}
      purpose="addForm"
      required={true}
      type="file"
    />
    <Input
      name="notes"
      onChange={[Function]}
      placeholder="Add some notes here"
      purpose="addForm"
      type="text"
      value=""
    />
    <Input
      name="address"
      onChange={[Function]}
      placeholder="Address (or closest guess)"
      purpose="addForm"
      required={true}
      type="text"
      value=""
    />
    <Input
      name="longitude"
      onChange={[Function]}
      placeholder="Longitude"
      required={true}
      type="hidden"
      value=""
    />
    <Input
      name="latitude"
      onChange={[Function]}
      placeholder="Latitude"
      required={true}
      type="hidden"
      value=""
    />
    <Button
      text="UPLOAD"
      type="submit"
    />
  </Form>
</div>
`;

exports[`<Add /> handles conditional rendering correctly 2`] = `
<Redirect
  push={false}
  to="photo/xyz"
/>
`;

exports[`<Add /> renders and displays properly if there IS a user 1`] = `
<div>
  <Form
    onSubmit={[Function]}
  >
    <Input
      accept="image/gif, image/png, image/jpeg"
      name="image"
      onChange={[Function]}
      purpose="addForm"
      required={true}
      type="file"
    />
    <Input
      name="notes"
      onChange={[Function]}
      placeholder="Add some notes here"
      purpose="addForm"
      type="text"
      value=""
    />
    <Input
      name="address"
      onChange={[Function]}
      placeholder="Address (or closest guess)"
      purpose="addForm"
      required={true}
      type="text"
      value=""
    />
    <Input
      name="longitude"
      onChange={[Function]}
      placeholder="Longitude"
      required={true}
      type="hidden"
      value=""
    />
    <Input
      name="latitude"
      onChange={[Function]}
      placeholder="Latitude"
      required={true}
      type="hidden"
      value=""
    />
    <Button
      text="UPLOAD"
      type="submit"
    />
  </Form>
</div>
`;

exports[`<Add /> renders and displays properly if there is no user 1`] = `
<div>
  <p>
    If you would like to add photos, please log in.
  </p>
</div>
`;

exports[`<Add /> shows controlled form values correctly 1`] = `
<div>
  <Form
    onSubmit={[Function]}
  >
    <Input
      accept="image/gif, image/png, image/jpeg"
      name="image"
      onChange={[Function]}
      purpose="addForm"
      required={true}
      type="file"
    />
    <Input
      name="notes"
      onChange={[Function]}
      placeholder="Add some notes here"
      purpose="addForm"
      type="text"
      value="description goes here"
    />
    <Input
      name="address"
      onChange={[Function]}
      placeholder="Address (or closest guess)"
      purpose="addForm"
      required={true}
      type="text"
      value="New York, NY USA"
    />
    <Input
      name="longitude"
      onChange={[Function]}
      placeholder="Longitude"
      required={true}
      type="hidden"
      value={-74.0059728}
    />
    <Input
      name="latitude"
      onChange={[Function]}
      placeholder="Latitude"
      required={true}
      type="hidden"
      value={40.7127753}
    />
    <Button
      text="UPLOAD"
      type="submit"
    />
  </Form>
</div>
`;
